--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
   <script>
     // === ЗАМЕНИ ЭТО ===
-    const FEED_URL = 'https://ai.allio.agency/feeds/vk_san_13.xml'; // ← сюда вставь URL твоего фида
+    const FEED_URL = 'https://raw.githubusercontent.com/dsmaznova-source/my-telegram-app2/refs/heads/main/complexes.json'; // ← сюда вставь URL твоего фида
     const TELEGRAM_CONFIG = {
       botToken: '8586234781:AAE87Am-arpkyk4tMcN44SYqSMJ8XDYrJKo',
       chatId: '896319728'
